CONFIGURE_FILE(matio_t.inc.in matio_t.inc IMMEDIATE @ONLY)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(fmatio matio_internal.c matio.f90)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/matio.mod DESTINATION include)

INSTALL(TARGETS fmatio
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
